[package]
name = "bach_token_swap"
version = "0.1.0"
description = "Token swap program for migrating BACH tokens to Token-2022"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bach_token_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30"
anchor-spl = { version = "0.30", features = ["token_2022"] }

[dev-dependencies]
solana-program-test = "~1.18.0"
solana-sdk = "~1.18.0"
spl-token = "~4.0.0"
spl-token-2022 = "~1.0.0"
